traces/bug_446.txt
src/bamglib/MeshRead.cpp:462: error: DEAD_STORE
  The value written to &l (type long) is never used.
Showing all 1 steps of the trace


src/bamglib/MeshRead.cpp:462:3: Write of unused value
460.     assert(l==2*sizeof(Int4));
461.     f_in >> nbv >> nbt ;
462.     l=f_in.Record();
         ^
463.     assert((size_t) l==nbt*sizeof(long)*4 + nbv*(2*sizeof(float)+sizeof(long)));
464.     if (verbosity>3)
